# Investment-Portfolio-Construction

./: .gitignore  README.md  constructor_app.py  data.dvc  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.dvc/: config
data/: cum_mut_info.xlsx
data/endog_data/: gazp.xlsx  gmkn.xlsx  lkoh.xlsx  mgnt.xlsx  mtss.xlsx  nlmk.xlsx  nvtk.xlsx  plzl.xlsx  rosn.xlsx  sber.xlsx
data/static/: style.css
data/templates/: derivatives.html  feature_selection.html  login.html  training.html
deploy/: Dockerfile
deploy/k8s/: deployment.yaml  pv-pvc.yaml  service.yaml
examples/jsons/: random_features_pnl_20250407.json
jsons/: random_features_pnl.json  random_features_pnl_1.json  random_features_pnl_2.json  random_features_pnl_20250313.json  random_features_pnl_20250314.json  random_features_pnl_20250317.json  random_features_pnl_20250320.json  random_features_pnl_20250321.json  random_features_pnl_20250325.json  random_features_pnl_20250404.json  random_features_pnl_20250406.json  random_features_pnl_3.json
notebooks/: model_user_guide.ipynb  sample_weighting_algorithm.ipynb  target_variable_markup.ipynb
portfolio_constructor/: __init__.py  charts.py  custom_metrics.py  feature_filter.py  feature_generator.py  loader.py  model.py  plotter.py  preprocessing.py  sampler.py  target_markup.py
results/: results.xlsx
utils/: __init__.py  custom_metrics.py  data_plots.py  feature_filter.py  feature_generator.py  loader.py  model.py  plotter.py  preprocessing.py  sampler.py  strategy_plots.py
webservice/: charts.py  main.py
(+19 files in other folders)
