[project]
name = "investment-portfolio-construction"
version = "0.1.0"
description = ""
authors = [
    {name = "Achikyan Eduard", email = "ed9119@mail.ru"},
    {name = "Tarasov Alexey", email = "alexey.d.tarasov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "catboost (>=1.2.8,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "sktime (>=0.37.0,<0.38.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "ruff (>=0.11.9,<0.12.0)",
    "dvc (>=3.59.2,<4.0.0)",
    "ipython (>=8.34.0,<10.0.0)",
    "dvc-s3 (>=3.2.0,<4.0.0)",
    "plotly (>=6.1.0,<7.0.0)",
    "nbformat (>=4.2.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "fastsession (>=0.3.0,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "kaleido (==0.2.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
